fix: fix overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -160,3 +160,8 @@ body {
     background-image: url(../assets/events.svg);
   }
 }
+
+.active-events__list {
+  margin-bottom: 20px;
+  overflow-y: scroll;
+}
